--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,6 @@ VITE_SUPABASE_URL=https://your-project.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key-here
 VITE_SUPABASE_PROJECT_ID=your-project-id
 
-# Optional: Only needed for local development with service role access
+# Edge functions need these environment variables (deployed automatically by Supabase)
+# If testing locally, add your service role key here:
 # VITE_SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
